test_regress/t/t_sys_readmem_assoc_bad.out
%Error: t/t_sys_readmem_assoc_bad.v:13:24: $readmemb address/key must be integral (IEEE 1800-2017 21.4.1)
                                         : ... In instance t
   13 |       $readmemb("not", assoc_bad_key);
      |                        ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_sys_readmem_assoc_bad.v:14:24: Unsupported: $readmemb array values must be integral
                                                     : ... In instance t
   14 |       $readmemb("not", assoc_bad_value);
      |                        ^~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
